# ai-devour-evolve

./: .gitignore  AI_CRASH_FIX_SUMMARY.md  AI_OPTIMIZATION_COMPLETE_v2.md  CAMERA_OPTIMIZATION_COMPLETE.md  CHANGELOG.md  CMakeLists-msvc.txt  CMakeLists-torch-only.txt  CMakeLists-torch-test.txt  CMakeLists.txt  CMakeUserPresets.json  COLLABORATION.md  CONTRIBUTING.md  ENHANCED_SYSTEM_SUMMARY.md  LICENSE  MULTI_AGENT_README.md  PROJECT_STRUCTURE.md  README.md  REINFORCEMENT_LEARNING_GUIDE.md  SECURITY.md  SETUP_GUIDE.md  THORNS_SPLIT_OPTIMIZATION.md  build_and_run.bat  build_multi_agent.bat  debug_boss_mode.bat  emergency_onnx_disable.txt  gobigger_env.pyi  gobigger_gym_env.py  run.bat  run_ai_debug.bat  run_ai_demo.bat  run_only.bat  setup_qt_env.bat  switch_to_ai_integration.bat  switch_to_ai_integration.sh  test_action_clamp.py  test_ai_debug.py  test_ai_fix.bat  test_env.py  test_fixes.bat  test_phase4.py  (+4 more)
assets/ai_models/: simple_gobigger_demo.onnx
assets/ai_models/exported_models/: AIModelInterface.h
develop-Documents/: cppneeds.md  environment-local-guide.md  environment-setup-guide.md  multi_agent_rl_branch_report.md  phase1-completion-report.md  phase1-final-summary.md  phase1.md  phase2pre.md  phase2py.md
develop-Documents/report/: course_design_report.md
models/: .gitkeep
need_docs/: 0701TODO.md  0707TODO.md  0708TODO.md  AI_INTEGRATION_BRANCH_TASKS.md  AI_Interface_Spec.md  AI_OPTIMIZATION_COMPLETED.md  AI_STRATEGY_OPTIMIZATION_PLAN.md  BRANCH_SWITCH_GUIDE.md  finished.md  headless-pybindll.md  mass_to_score_conversion.md  needs.md
python/: README.md  bindings.cpp  debug_observation.py  gobigger_rl_config.py  multi_agent_bindings.cpp  multi_agent_game_engine.cpp  multi_agent_game_engine.h  multi_agent_gobigger_gym_env.py  pybind11_qt_casters.h  test_env.py  verify.py
scripts/: ENHANCED_REWARD_README.md  OPTIMIZATION_SUMMARY.md  check_data_deep.py  check_data_structure.py  create_demo_model.py  debug_collision_detailed.py  debug_fixed.py  debug_game_state.py  debug_gym_environment.py  debug_reward_calculation.py  debug_reward_transmission.py  demo_enhanced_reward.py  diagnose_model.py  enhanced_reward_system.py  evaluate_model.py  export_ai_model.py  gobigger_gym_env.py  optimized_reward_system.py  replay_20250628_185221.json  replay_20250628_211704.json  replay_20250628_213712.json  replay_20250628_214838.json  replay_20250629_115912.json  replay_20250630_071651.json  replay_20250701_071639.json  replay_20250701_075825.json  replay_20250701_075944.json  simple_rl_demo.py  test_action_clamp.py  test_agent_score.py  test_enhanced_reward.py  test_env.py  test_food_fix.py  test_food_targeting.py  test_monitor_fix.py  test_monitor_integration.py  test_phase4.py  test_reward_variation.py  test_sb3_reward_fix.py  train_enhanced_reward.py  (+5 more)
scripts/exported_models/: model_info.json
scripts/tensorboard_logs/PPO_gobigger_1/: events.out.tfevents.1751107541.Auroras.42004.0
scripts/tensorboard_logs/PPO_gobigger_10/: events.out.tfevents.1751123070.Auroras.41056.0
scripts/tensorboard_logs/PPO_gobigger_11/: events.out.tfevents.1751124233.Auroras.2300.0
scripts/tensorboard_logs/PPO_gobigger_12/: events.out.tfevents.1751124644.Auroras.22736.0
scripts/tensorboard_logs/PPO_gobigger_13/: events.out.tfevents.1751124793.Auroras.11660.0
scripts/tensorboard_logs/PPO_gobigger_14/: events.out.tfevents.1751124825.Auroras.35988.0
scripts/tensorboard_logs/PPO_gobigger_15/: events.out.tfevents.1751126545.Auroras.36588.0
scripts/tensorboard_logs/PPO_gobigger_16/: events.out.tfevents.1751126594.Auroras.7308.0
scripts/tensorboard_logs/PPO_gobigger_17/: events.out.tfevents.1751126905.Auroras.44632.0
scripts/tensorboard_logs/PPO_gobigger_18/: events.out.tfevents.1751126982.Auroras.38468.0
scripts/tensorboard_logs/PPO_gobigger_19/: events.out.tfevents.1751127066.Auroras.38988.0
scripts/tensorboard_logs/PPO_gobigger_2/: events.out.tfevents.1751109431.Auroras.30512.0
scripts/tensorboard_logs/PPO_gobigger_20/: events.out.tfevents.1751127109.Auroras.32484.0
scripts/tensorboard_logs/PPO_gobigger_21/: events.out.tfevents.1751127177.Auroras.37368.0
scripts/tensorboard_logs/PPO_gobigger_22/: events.out.tfevents.1751127227.Auroras.19328.0
scripts/tensorboard_logs/PPO_gobigger_23/: events.out.tfevents.1751127275.Auroras.11580.0
scripts/tensorboard_logs/PPO_gobigger_24/: events.out.tfevents.1751127329.Auroras.38024.0
scripts/tensorboard_logs/PPO_gobigger_25/: events.out.tfevents.1751127394.Auroras.39700.0
scripts/tensorboard_logs/PPO_gobigger_3/: events.out.tfevents.1751114316.Auroras.32776.0
scripts/tensorboard_logs/PPO_gobigger_4/: events.out.tfevents.1751116200.Auroras.29388.0
scripts/tensorboard_logs/PPO_gobigger_5/: events.out.tfevents.1751116943.Auroras.5080.0
scripts/tensorboard_logs/PPO_gobigger_6/: events.out.tfevents.1751117208.Auroras.41764.0
scripts/tensorboard_logs/PPO_gobigger_7/: events.out.tfevents.1751118936.Auroras.41268.0
src/: AIController.cpp  AIController.h  AIDebugWidget.cpp  AIDebugWidget.h  AIPlayer.cpp  Application.cpp  Application.h  Ball.cpp  Ball.h  BaseBall.cpp  BaseBall.h  BaseBall_new.cpp  BaseBall_old.cpp  CloneBall.cpp  CloneBall.h  Food.cpp  Food.h  FoodBall.cpp  FoodBall.h  FoodItem.cpp  GameController.cpp  GameController.h  GameLauncherWidget.cpp  GameLauncherWidget.h  GameManager.cpp  GameManager.h  GameOverScreen.cpp  GameOverScreen.h  GameStartScreen.cpp  GameStartScreen.h  GameView.cpp  GameView.h  GameWindow.cpp  GameWindow.h  GameWorld.cpp  GameWorld.h  GoBiggerConfig.h  HumanController.cpp  HumanController.h  MultiPlayerManager.cpp  (+34 more)
src/core/: CoreUtils.cpp  CoreUtils.h  GameEngine.cpp  GameEngine.h
src/core/data/: BaseBallData.cpp  (+9 more)
src_new/: AIDebugWidget.cpp  AIPlayer.h  BaseBall.cpp  CloneBall.cpp  CloneBall.h  DemoQtVS.cpp  DemoQtVS.h  DemoQtVS.ui  FoodBall.h  FoodItem.h  GameManager.cpp  GameManager.h  GoBiggerConfig.h  ONNXInference.cpp  SimpleAIPlayer.cpp  SimpleAIPlayer.h  SporeBall.cpp  SporeBall.h  main.cpp  multiplayer_test.cpp  simple_ai_test.cpp  simple_console_test.cpp  test_onnx_integration.cpp
(+15 files in other folders)
